--- a/szf-web-2021majus/index.html
+++ b/szf-web-2021majus/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jackie Stewart</title>
+        <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
         
@@ -43,13 +45,17 @@
         <section id="palyafutasa">
             Pályafutása
 
-            Kategória	Formula–1-es világbajnokság
-            Aktív évei	1965 – 1973
+            <table>
+                <tr>
+                    <th>ória	Formula–1-es világbajnokság</th>
+            <th>Aktív évei	1965 – 1973</th>
+            </tr>
             Csapatai: BRM, Matra, Tyrrell
             Nagydíjak száma	100 (99 rajt)
             Világbajnoki címek	3 (1969, 1971, 1973)
             Győzelmek	27
             Dobogós helyezések	43
+            </table>
         </section>
         <section id="kepek">
             Képek
@@ -83,8 +89,7 @@
         Forrás: Wikipédia
     </footer>
     
-	<script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+	
    
 </body>
 </html>
